--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "font-awesome": "fontawesome#^4.6.3",
-    "slick-carousel": "^1.6.0"
+    "slick-carousel": "^1.6.0",
+    "angular-slick": "^0.2.1"
   }
 }
